--- a/.github/workflows/update_wall.yaml
+++ b/.github/workflows/update_wall.yaml
@@ -24,8 +24,8 @@ jobs:
       
       - name: Install Dependencies
         run: |
-          pip install --upgrade pip
-          pip install -r requirements.txt
+          python -m pip install --upgrade pip
+          python -m pip install -r requirements.txt
 
       - name: Write Visitor to File
         env:
