--- a/.github/workflows/update_wall.yaml
+++ b/.github/workflows/update_wall.yaml
@@ -22,6 +22,9 @@ jobs:
         with:
           python-version: '3.12.1'
       
+      - name: Wait For Github Status Check
+        uses: autotelic/action-wait-for-status-check@v1.0.1
+      
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
@@ -41,7 +44,7 @@ jobs:
         run: python generate.py
       
       - name: Commit and Push Changes
-        if: ${{ steps.update_wall.outcome == 'success' }}
+        if: steps.update_wall.outputs.state == 'success'
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
