--- a/.github/workflows/update_wall.yaml
+++ b/.github/workflows/update_wall.yaml
@@ -22,9 +22,6 @@ jobs:
         with:
           python-version: '3.12.1'
       
-      - name: Wait For Github Status Check
-        uses: autotelic/action-wait-for-status-check@v1.0.1
-      
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
@@ -36,15 +33,21 @@ jobs:
           ISSUE_TITLE: ${{ github.event.issue.title }}
         run: python write_visitors_file.py
       
-      - id: update_wall
-        name: Update Visitor Wall
+      - name: Update Visitor Wall
         env:
           ISSUE_TITLE: ${{ github.event.issue.title }}
           ISSUE_USER: ${{ github.event.issue.user.login }}
         run: python generate.py
       
+  
+  commit_and_push:
+    runs-on: ubuntu-latest
+    needs: update_wall
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+      
       - name: Commit and Push Changes
-        if: steps.update_wall.outputs.state == 'success'
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
