--- a/.github/workflows/update_wall.yaml
+++ b/.github/workflows/update_wall.yaml
@@ -43,6 +43,7 @@ jobs:
       - name: Commit and Push Changes
         if: steps.update_wall.outcome == 'success'
         run: |
+          sleep 8
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add -A
